--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -102,7 +102,8 @@ In our research for part selection we wanted to create a generalized comparison 
 \end{itemize}
 Therefore, all of the MCUs listed above support either the 802.11 or Bluetooth standards.
 
-\paragraph{External ADC Module} Use of an external ADC was considered, but ultimately decided against. An external ADC module would only add further cost and complexity to a project where the on-chip ADC is sufficiently effective for the project's requirements. The sample rate and resolution of an on-chip ADC is more than enough for our needs, and the low-cost goal of the project directly conflicts with the idea of purchasing an external ADC module.
+\paragraph{External ADC Module} Use of an external ADC was considered, and originally was decided against because an external ADC module would only add further cost and complexity to a project where the on-chip ADC is sufficiently effective for the project's requirements. The sample rate and resolution of an on-chip ADC is more than enough for our needs, and the low-cost goal of the project directly conflicts with the idea of purchasing an external ADC module.
+Ultimately, the team had to use an external ADC module because the operational range of the onboard ADC was not sufficient.
 
 \paragraph{Selection} Ultimately, the \href{https://www.ti.com/tool/LAUNCHCC3220MODASF}{LAUNCHCC3220MODASF} was chosen as the microcontroller development board for this project. In the event that the aforementioned LaunchPad is not able to be obtained, the \href{https://www.ti.com/tool/CC3220SF-LAUNCHXL}{CC3220SF-LAUNCHXL} has  quivalent capability for the project's needs.
 
@@ -142,7 +143,7 @@ These boards, henceforth referred to as the CC3220, are able to be requested fro
 
 \paragraph{Bill of Materials} The bill of materials for the controller subsystem can be found in \autoref{table:controller_bom}.
 
-\begin{table}
+\begin{table}[H]
 	\centering
 	\begin{tabularx}{\textwidth}
 		{
@@ -708,6 +709,7 @@ As stated above, the beam that needs to be coupled into the fiber is not collima
 Since cost is equivalent for all models, the only factors are numerical aperture and beam size. All three beam sizes are acceptable and will not have a significant impact on the system quality. In order to maximize the amount of light that can be coupled into the fiber, the numerical aperture will be selected to match that of the fiber. Our group selected Model F240SMA-980 for these reasons.
 
 \paragraph{Bill of Materials}
+The BOM for the sensing subsystem can be found in the table below.
 
 \begin{table}[H]
 	\centering
